feat: tugas pertemuan 6 - update student feature
